# swarmfi

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEEDBACK.md  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
agents/: __init__.py  base.py  executor.py  researcher.py  risk.py
axl/: AXL_ROUTING_NOTES.md
axl/configs/: executor.json  researcher.json  risk.json
core/: __init__.py  axl_bus.py  axl_client.py  pnl.py  registry.py  scanner.py  schema.py
core/compute/: client.py  risk_scorer.py
core/ens/: resolver.py
core/keeperhub/: __init__.py  client.py  executor.py  feedback.md  models.py
core/storage/: __init__.py  agent_memory.py  client.py  kv.py  log.py  models.py
core/uniswap/: __init__.py  client.py  executor.py  models.py
dashboard/: index.html  server.py
docs/: DEPLOY_COOLIFY.md  VIDEO_SCRIPT.md
scripts/: build_sidecar.sh  health_check.sh  setup.sh  start_nodes.sh  stop_nodes.sh
tests/: __init__.py  test_axl_client.py  test_connectivity.py  test_keeperhub_client.py  test_keeperhub_executor.py  test_keeperhub_integration.py  test_keeperhub_models.py  test_registry.py  test_schema.py  test_storage_integration.py  test_storage_kv.py  test_storage_log.py  test_storage_models.py  test_swap_executor.py  test_uniswap_client.py  test_uniswap_integration.py  test_uniswap_models.py
zg-compute-sidecar/: sidecar.mjs
zg-sidecar/: .gitignore  package-lock.json  package.json  sidecar.mjs
