[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmfi"
version = "0.1.0"
description = "Autonomous DeFi swarm — P2P agents powered by AXL, 0G, Uniswap, and KeeperHub"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "anyio>=4.4",
    "tenacity>=8.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "respx>=0.21",          # httpx mock library
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*"]

[tool.pytest.ini_options]
asyncio_mode        = "auto"
asyncio_default_fixture_loop_scope = "function" 
timeout             = 600
testpaths           = ["tests"]
log_cli             = true
log_cli_level       = "INFO"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires live AXL nodes",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true